--- a/paper/preamble/metadata.tex
+++ b/paper/preamble/metadata.tex
@@ -1,5 +1,5 @@
 \newcommand{\papertitle}{%
-  Kronecker-factored Approximate Gauß-Newton Methods for Physics-Informed Neural Networks 
+  A Kronecker-factored Approximate Gauß-Newton Method for Physics-Informed Neural Networks 
 }
 \title{\papertitle}
 
@@ -13,21 +13,23 @@
 
 \author{%
   Felix Dangel\thanks{Equal contribution, correspondence to \url{some mail}.}\\
-  Department of Computer Science\\
-  Cranberry-Lemon University\\
-  Pittsburgh, PA 15213 \\
-  \texttt{hippo@cs.cranberry-lemon.edu} \\
+  Vector Institute\\
+  661 University Ave. \\
+  Toronto, Canada \\
+  \texttt{fdangel@vectorinstitute.ai} \\
   % examples of more authors
   \And
   Johannes M\"uller$^*$\\
-  Affiliation \\
-  Address \\
-  \texttt{email} \\
+  Department of Mathematics \\
+  RWTH Aachen University \\
+  Aachen, Germany \\
+  \texttt{mueller@mathc.rwth-aachen.de} \\
   \And
   Marius Zeinhofer$^*$\\
-  Affiliation \\
-  Address \\
-  \texttt{email} \\
+  University Hospital \\
+  University of Freiburg \\
+  Freiburg, Germany \\
+  \texttt{mariusz@simula.no} 
 }
 %%% Local Variables:
 %%% mode: latex
