--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -28,7 +28,11 @@
 \section{Experimental Details and Additional Results}
 \input{sections/experimental_details.tex}
 
-\section{The Computations for the Different KFACs}
+%\section{Derivation of KFAC general PDEs}\label{app:generalPDEs}
+%\input{paper/sections/general_PDEs}
+
+
+\section{Detailed Derivation of the KFAC Approximation}\label{app:derivations}
 \input{sections/kfacs}
 
 \section{Pseudo-Code: KFAC for the Poisson Equation}
@@ -36,9 +40,6 @@
 
 %\section{Example: Laplacian for a Shallow Network}
 %\input{sections/laplacian_shallow_net.tex}
-
-\section{Inverting the Sum of Two Kronecker Matrices}\label{sec:inverse_kronecker_sum}
-\input{sections/inverse_kronecker_sum}
 
 %\section{Heat Equation}\label{sec:heat_equation}
 %\input{sections/heat_equation.tex}
