--- a/paper/sections/pseudocode_poisson.tex
+++ b/paper/sections/pseudocode_poisson.tex
@@ -21,7 +21,7 @@
 
   \State $(\partial\mZ_n^{(1)}\dots, \partial\mZ_n^{(L)}) \gets \partial \Delta u_{\vtheta}(\vx_n^{\Omega})\quad n=1, \dots, N_{\Omega}$ \Comment Layer output gradients w/ autodiff
 
-  \ForAll{l=1, \dots, L} \Comment Update Kronecker factors of the interior loss
+  \ForAll{$l=1, \dots, L$} \Comment Update Kronecker factors of the interior loss
   \State $\mA_{\Omega}^{(l)} \gets \beta \mA_{\Omega}^{(l)} + (1-\beta) \frac1{N_{\Omega}} \sum_{n=1}^{N_{\Omega}} \mZ_n^{(l-1)} \mZ_n^{(l-1)\top}$
 
   \State $\mB_{\Omega}^{(l)} \gets \beta \mB_{\Omega}^{(l)} + (1-\beta) \frac1{N_{\Omega}} \sum_{n=1}^{N_{\Omega}} \partial\mZ_n^{(l)} \partial\mZ_n^{(l)\top}$
@@ -35,7 +35,7 @@
 
   \State $(\partial\vz_n^{(1)}\dots, \partial\vz_n^{(L)}) \gets \partial u_{\vtheta}(\vx_n^{\partial\Omega})\quad n=1, \dots, N_{\partial\Omega}$ \Comment Layer output gradients w/ autodiff
 
-  \ForAll{l=1, \dots, L} \Comment Update Kronecker factors of the boundary loss
+  \ForAll{$l=1, \dots, L$} \Comment Update Kronecker factors of the boundary loss
   \State $\mA_{\partial\Omega}^{(l)} \gets \beta \mA_{\partial\Omega}^{(l)} + (1-\beta) \frac1{N_{\partial\Omega}} \sum_{n=1}^{N_{\partial\Omega}} \vz_n^{(l-1)} \vz_n^{(l-1)\top}$ \Comment Augment $\vz_n$ with 1 for the bias
 
   \State $\mB_{\partial\Omega}^{(l)} \gets \beta \mB_{\partial\Omega}^{(l)} + (1-\beta) \frac1{N_{\partial\Omega}} \sum_{n=1}^{N_{\partial\Omega}} \partial\vz_n^{(l)} \partial\vz_n^{(l)\top}$
@@ -51,7 +51,7 @@
   \State \textbf{4) Compute the gradient using autodiff, pre-condition the gradient}
   \State $(\vg^{(1)}, \dots, \vg^{(L)}) \gets \partial_{\vtheta} ( \gL_{\Omega}(\vtheta) + \gL_{\partial\Omega}(\vtheta))$ \Comment Gradient w/ autodiff
 
-  \ForAll{l=1, \dots, L}
+  \ForAll{$l=1, \dots, L$}
   \Comment Pre-condition gradient using damping
   \State $\vg^{(l)} \gets  \vg^{(l)}$
 
