--- a/paper/references.bib
+++ b/paper/references.bib
@@ -79,8 +79,8 @@
 }
 
 @inproceedings{martens2018kroneckerfactored,
-  title =        {Kronecker-factored Curvature Approximations for Recurrent
-                  Neural Networks},
+  title =        {{Kronecker-factored Curvature Approximations for Recurrent
+                  Neural Networks}},
   author =       {James Martens and Jimmy Ba and Matt Johnson},
   booktitle =    {International Conference on Learning Representations},
   year =         2018,
@@ -455,7 +455,7 @@
 @article{yu2018deep,
   title =        {The deep Ritz method: a deep learning-based numerical
                   algorithm for solving variational problems},
-  author =       {Yu, Bing and E, Weinan},
+  author =       {E, Weinan and Yu, Bing},
   journal =      {Communications in Mathematics and Statistics},
   volume =       6,
   number =       1,
@@ -508,3 +508,99 @@
   booktitle =    {Advances in Neural Information Processing Systems (NeurIPS)},
   year =         2019,
 }
+
+@article{muller2024optimization,
+  title={Optimization in SciML--A Function Space Perspective},
+  author={M{\"u}ller, Johannes and Zeinhofer, Marius},
+  journal={arXiv preprint arXiv:2402.07318},
+  year={2024}
+}
+
+@article{jnini2024gauss,
+  title={Gauss-Newton Natural Gradient Descent for Physics-Informed Computational Fluid Dynamics},
+  author={Jnini, Anas and Vella, Flavio and Zeinhofer, Marius},
+  journal={arXiv preprint arXiv:2402.10680},
+  year={2024}
+}
+
+@article{pfau2020ab,
+  title={Ab initio solution of the many-electron Schr{\"o}dinger equation with deep neural networks},
+  author={Pfau, David and Spencer, James S and Matthews, Alexander GDG and Foulkes, W Matthew C},
+  journal={Physical Review Research},
+  volume={2},
+  number={3},
+  pages={033429},
+  year={2020},
+  publisher={APS}
+}
+
+@article{drissi2024second,
+  title={Second-order optimisation strategies for neural network quantum states},
+  author={Drissi, M and Keeble, JWT and Sarmiento, J Rozal{\'e}n and Rios, A},
+  journal={arXiv preprint arXiv:2401.17550},
+  year={2024}
+}
+
+@article{krishnapriyan2021characterizing,
+  title={Characterizing possible failure modes in physics-informed neural networks},
+  author={Krishnapriyan, Aditi and Gholami, Amir and Zhe, Shandian and Kirby, Robert and Mahoney, Michael W},
+  journal={Advances in Neural Information Processing Systems},
+  volume={34},
+  pages={26548--26560},
+  year={2021}
+}
+
+
+@article{bonfanti2024challenges,
+  title={The Challenges of the Nonlinear Regime for Physics-Informed Neural Networks},
+  author={Bonfanti, Andrea and Bruno, Giuseppe and Cipriani, Cristina},
+  journal={arXiv preprint arXiv:2402.03864},
+  year={2024}
+}
+
+@article{grosse2023studying,
+  title={Studying large language model generalization with influence functions},
+  author={Grosse, Roger and Bae, Juhan and Anil, Cem and Elhage, Nelson and Tamkin, Alex and Tajdini, Amirhossein and Steiner, Benoit and Li, Dustin and Durmus, Esin and Perez, Ethan and others},
+  journal={arXiv preprint arXiv:2308.03296},
+  year={2023}
+}
+
+@article{zhang2019algorithmic,
+  title={Which algorithmic choices matter at which batch sizes? insights from a noisy quadratic model},
+  author={Zhang, Guodong and Li, Lala and Nado, Zachary and Martens, James and Sachdeva, Sushant and Dahl, George and Shallue, Chris and Grosse, Roger B},
+  journal={Advances in neural information processing systems},
+  volume={32},
+  year={2019}
+}
+
+@article{osawa2023pipefisher,
+  title={Pipefisher: Efficient training of large language models using pipelining and fisher information matrices},
+  author={Osawa, Kazuki and Li, Shigang and Hoefler, Torsten},
+  journal={Proceedings of Machine Learning and Systems},
+  volume={5},
+  year={2023}
+}
+
+@inproceedings{pauloski2021kaisa,
+  title={Kaisa: an adaptive second-order optimizer framework for deep neural networks},
+  author={Pauloski, J Gregory and Huang, Qi and Huang, Lei and Venkataraman, Shivaram and Chard, Kyle and Foster, Ian and Zhang, Zhao},
+  booktitle={Proceedings of the International Conference for High Performance Computing, Networking, Storage and Analysis},
+  pages={1--14},
+  year={2021}
+}
+
+@article{chen2024teng,
+  title={TENG: Time-Evolving Natural Gradient for Solving PDEs with Deep Neural Net},
+  author={Chen, Zhuo and McCarran, Jacob and Vizcaino, Esteban and Solja{\v{c}}i{\'c}, Marin and Luo, Di},
+  journal={arXiv preprint arXiv:2404.10771},
+  year={2024}
+}
+
+@article{zampini2024petscml,
+  title={PETScML: Second-order solvers for training regression problems in Scientific Machine Learning},
+  author={Zampini, Stefano and Zerbinati, Umberto and Turkiyyah, George and Keyes, David},
+  journal={arXiv preprint arXiv:2403.12188},
+  year={2024}
+}
+
+
