--- a/paper/sections/background_kfac.tex
+++ b/paper/sections/background_kfac.tex
@@ -7,6 +7,23 @@ We review the idea of Kronecker-factored Approximate Curvature (KFAC) which was 
 %This approach was introduced in the context of maximum likelihood estimation with a neural network and we reivew its basic principles here. 
 %Later, we will expand this to Gramian matrices with PDE terms. 
 %\toodoo{We could also follow \cite{eschenhagen2023kroneckerfactored} for the notation} 
+%In least squares regression with data $(\vx_1, \vy_1), \dots, (\vx_N, \vy_N)$ the %Gramian $\mG(\vtheta)$ is given by 
+%a popular choice as a Gramian is given by the Gauß-Newton matrix 
+%\begin{equation}
+%    F_I(\vtheta)_{ij} = \sum_{x} \frac{\partial_{\vtheta_i}p_\vtheta(x)\partial_{\vtheta_j}p_\vtheta(x)}{p_\vtheta(x)} = \sum_{x} \partial_{\vtheta_i} \log p_\vtheta(x) \partial_{\vtheta_j} \log p_\vtheta(x),
+%\end{equation}
+%in which case the Riemannian metric $g$ is given by the Fisher-Rao metric~\citet{}.
+%For a supervised learning problem with training data $(\vx_1, \vy_1), \dots, (\vx_N, \vy_N)$ the (empirical) Fisher-information matrix commonly used, has entries the entries
+Here, the Fisher information matrix with data $(\vx_1, \vy_1), \dots, (\vx_N, \vy_N)$ is given by 
+\begin{equation}
+  %\mF(\vtheta)_{ij} = \sum_{n=1}^N \partial_{\vtheta_i} u_\vtheta(\vx_n)\partial_{\vtheta_j} u_\vtheta(\vx_n) \quad \text{maybe use?}
+  \mF(\vtheta) = \frac1N\sum_{n=1}^N \jac_{\vtheta} u_{\vtheta}(\vx_n)^\top \jac_{\vtheta} u_{\vtheta}(\vx_n) = \frac1N\sum_{n=1}^N \jac_{\vtheta} \vu_n^\top \jac_{\vtheta} \vu_n
+  ,
+ \end{equation}
+where $\vu_n = u_\vtheta(\vx_n)$, which agrees with the %(empirical) Fisher information matrix~
+classic Gauß-Newton matrix~\citep{martens2020new, eschenhagen2023kroneckerfactored}. 
+%Here, we have used the suggestive short-hand notation $\vu_n = u_\vtheta(\vx_n)$. 
+To distinguish between the Gauß-Newton matrix $\mG(\vtheta)$ for PINNs, we refer to the Gauß-Newton matrix $\mF(\vtheta)$ as the Fisher matrix or Fisher. 
 
 
 \paragraph{Block-diagonal approximation}
