--- a/paper/sections/kfacs.tex
+++ b/paper/sections/kfacs.tex
@@ -1,3 +1,63 @@
+Here, we provide the derivation of the general Kronecker-factored approximation of the Gauß-Newton matrix. 
+Recall that we consider the general PDE
+\begin{equation}
+    \Psi(u, \partial u, \dots, \partial^{(k)} u) = 0,
+\end{equation}
+where $\Psi\colon \mathbb R^{K}\to\mathbb R^M$ is some smooth function.
+By $r_\vtheta(\vx)\coloneqq \Psi(u(\vx), \partial u(\vx), \dots, \partial^{(k)} u(\vx))$ we denote the residual and consider the PINN loss
+\begin{equation}
+    L(\vtheta)\coloneqq \frac1N\sum_{n=1}^N \ell(r_{\vtheta}(\vx_n)),
+\end{equation}
+where $\ell\colon\mathbb R^K\to\mathbb R, K=\binom{d+k}{d}$ is a smooth convex function with definite Hessian $\nabla^2\ell\succ0$ that typically has a unique minimizer at $0$. 
+We consider the Gauß-Newton matrix
+\begin{align}
+    \mG(\vtheta) & \coloneqq \frac1N\sum_{n=1}^N \jac_\vtheta r_\vtheta(\vx_n)^\top \mLambda(r_\vtheta(\vx_n)) \jac_\vtheta r_\vtheta(\vx_n),
+\end{align}
+where $\mLambda(r)\coloneqq \nabla^2 \ell(r)$ denotes the Hessian of the per-sample loss. 
+
+Typically, in PINNs, one chooses $\ell = \frac12\lVert \cdot \rVert_2^2$ to be the squared Euclidean distance, such that $\mLambda = \mI$.
+Note, however, that in contrast to a regression problem, the residual $r_\vtheta$ involves PDE terms and not only function evaluations.
+If we have a forward iteration for $r_\vtheta$, we can apply existing KFAC approximations.
+We obtain this via higher-order forward mode automatic differentiation.
+
+Writing $v_\vtheta(\vx)\coloneqq (%u_\vtheta(\vx), \nabla u_\vtheta(\vx), \nabla^{2} u_\vtheta(\vx)
+u(\vx), \partial u(\vx), \dots, \partial^{(k)} u(\vx))$
+we can express the block corresponding to the $l$-th layer of the Gauß-Newton matrix as 
+\begin{align}
+    \mG(\mW^{(l)}) & = \frac1N\sum_{n=1}^N \jac_{\mW^{(l)}} v_\vtheta(\vx_n)^\top \underbrace{\jac \Psi(v_\vtheta(\vx_n))^\top \mLambda(r_\vtheta(\vx_n)) \jac \Psi(v_\vtheta(\vx_n))}_{\eqqcolon \mA_n}  \jac_{\mW^{(l)}} v_\vtheta(\vx_n),
+\end{align}
+and $v_\vtheta$ is a forward network with shared weights.
+%The reduce approximation is then given by
+%\begin{align}
+%    \hat{\mG}(\mW^{(l)}) \coloneqq \left(\sum_{n=1}^N \left( \sum_{s=1}^S \vz^{(l)}_{n,s} \right) \left(\sum_{s=1}^S {\vz^{(l)}_{n,s}}^\top\right)\right)\otimes\left(\sum_{n=1}^N\left(\sum_{s=1}^S \vg^{(l)}_{n,s} \right) \mH(\vtheta, \vx_n) \left( \sum_{s=1}^S {\vg^{(l)}_{n,s}}^\top \right) \right)?
+%\end{align}
+\todo[inline]{@johannes: elaborate this}
+
+Note that the forward pass in~\eqref{eq:forward_pass} extends to higher-order partial derivatives 
+\begin{align}
+    \partial_\vx^\alpha \vz^{(l)} = \mW^{(l)}\partial_\vx^\alpha \vz^{(l-1)} 
+\end{align}
+and hence, we can perceive the computational graph of $v_\vtheta$ as a feedforward network with weight sharing over the multi-indices $\alpha\in\mathbb N$ with $\lvert \alpha \rvert \le k$.
+The generalization of the approximation~\eqref{eq:KFAC-PINN} is given by 
+\begin{align}\label{eq:KFAC-PINNs-general}
+    \hat{\mG}%^{\textup{exp}}
+    (\mW^{(l)})
+    \coloneqq \frac{1}{N^2 \binom{d+k}{d}}
+    \left[\sum_{n=1}^N \sum_{\lvert \alpha \rvert \le k} %\mZ^{(l-1)}_{n,\alpha}{\mZ^{(l-1)}_{n,\alpha}}^\top 
+    \partial_\vx^\alpha \vz_n^{(l)} {\partial_\vx^\alpha \vz_n^{(l)}}^\top\right]
+    \otimes
+    \left[\sum_{n=1}^N\sum_{\lvert \alpha \rvert \le k} \vg^{(l)}_{n,\alpha} \mA_n {\vg^{(l)}_{n,\alpha}}^\top   \right],
+\end{align}
+%where $\mZ^{(l)}_{n,\alpha} = \partial_\vx^\alpha \vz_n^{(l)}$ and 
+where $\vg^{(l)}_{n,\alpha} = \nabla_{\partial_\vx^\alpha \vz_n^{(l)}} \vv_n$ and $\vv_n = v_\vtheta(\vx_n) %= (\partial^\beta_\vx \vz_{n}^{L})_{\lvert \beta \rvert \le k}
+$. 
+A detailed derivation can be found in \Cref{app:derivations}.
+%
+This approximation can be stated for a large class of weight-sharing architectures in which case it generalizes the \emph{expand approximation} by~\citet{eschenhagen2023kroneckerfactored}. 
+
+
+
+
 \begin{equation*}
     \mG_\Omega(\mW^{(l)})
     =
@@ -81,3 +141,24 @@ An alternative to the approximation above, one can use the approximation $\sum_{
     \otimes
     \left[\sum_{n=1}^N\sum_{s=1}^S \vg^{(l)}_{n,s}{\vg^{(l)}_{n,s}}^\top \right].
 \end{align*}
+
+\paragraph{Forward KFAC}
+One downside of our approach is that we need to store the full computation graph of the forward Laplacian framework to compute the grad-output-based Kronecker factors.
+To speed up computation, we can neglect the quantities in the approximation $\hat{\mG}_\Omega^{\textup{exp}}$ that require a backward pass.
+We call the corresponding approximation \emph{forward KFAC}, which is given by
+\begin{align}
+    \hat{\mG}_\Omega^{\textup{for}}(\mW^{(l)})
+    \coloneqq \frac{1}{N^2 S}
+    \left[\sum_{n=1}^N \sum_{s=1}^S \mZ^{(l-1)}_{n,s}{\mZ^{(l-1)}_{n,s}}^\top \right]
+    \otimes
+    \mI.
+\end{align}
+Some works find that if setting this factor to $\mI$, the resulting input-based KFAC still yields good performance~\cite{benzing2022gradient,petersen2023isaac}.
+%\paragraph{Input-based Kronecker approximation:}
+
+\paragraph{Empirical KFAC}
+\begin{itemize}
+    \item write the Hessian as the expectation with log-likelihood and Gaussian noise 
+    \item then approximate the expectation with empirical samples 
+    \item this reduces computation time...? 
+\end{itemize}
