--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -1,4 +1,70 @@
 
+
+%\subsection{Setup}
+
+\paragraph{Tested optimizers}
+We implement KFAC, KFAC*, as well as the diagonal, block-diagonal, and full-Gramian ENGD in PyTorch~\citep{paszke2019pytorch}.
+As a matrix-free version of ENGD, we use the HessianFree optimizer~\citep{?} which uses truncated CG with exact Gramian-vector products to pre-condition the gradient.
+We chose this because there is a fully-featured implementation from~\citet{tatzel2022late} which offers many additional heuristics such as adaptive damping, CG backtracking, and backtracking line search, which allows this algorithm to be operated with very little hyperparameter searching.
+We also use SGD with a tuned learning rate and momentum, as well as Adam with a tuned learning rate.
+
+\paragraph{Experimental setup}
+\begin{itemize}
+\item We tune the hyper parameters with a random search. ... 
+\item All xperiments are run on a compute cluster with RTX 6000 GPUs (24\,GiB RAM).
+\item 
+\end{itemize}
+
+
+\subsection{Pedagogical examples: 2D Poisson and 1D Heat equation}
+
+We consider the two low-dimensional PDEs used to demonstrate the efficacy of energy natural gradients by~\cite{muller2023achieving}
+as we can use it as a baseline here for its KFAC approximation. 
+The problems are given by the two-dimensional Poisson equation 
+\begin{align}\label{eq:2D-Poisson}
+    \begin{split}
+        -\Delta u(x,y) & = 2\pi^2 sin(\pi x) \sin(\pi y) \quad \text{for } (x,y)\in[0,1]^2 \\ 
+    u(x,y) & = 0 \quad \text{for } (x,y) \in\partial[0,1]^2
+    \end{split}
+\end{align}
+as well as the one-dimensional heat equation 
+\begin{align}\label{eq:1D-Heat}
+    \begin{split}
+        \partial_t u(t,x) &= \kappa\partial_x^2u(t,x) \quad \text{for }(t,x)\in[0,1]^2
+        \\
+        u(0,x) &= \sin(\pi x) \qquad\;\, \text{for }x\in[0,1]
+        \\
+        u(t,x) &= 0 \qquad\qquad\quad\text{for }(t,x)\in[0,1]\times\{0,1\}.
+    \end{split}
+\end{align}
+Here, we choose the heat-conductivity $\kappa = \frac14$ in our experiments. 
+
+We evaluate the performance of various optimizers... for different network architectures with $4$ hidden layers of different widths and the hyperbolic tangent $\tanh$ as an activation function. 
+As both equations admit closed explicit solutions, we report the relative $L^2$ errors against the wall clock time achieved by the different optimizers in \Cref{fig:2D-Poisson} and \Cref{fig:1D-heat} for the two problems, respectively. 
+
+\begin{figure}
+    \centering
+    \includegraphics{}
+    \caption{We report the performance of different optimizers on the Poisson equation~\eqref{eq:2D-Poisson} measured in relative $L^2$ error against wall clock time for architectures with different parameter dimensions $D$; }
+    \label{fig:2D-Poisson}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics{}
+    \caption{We report the performance of different optimizers on the Poisson equation~\eqref{eq:1D-Heat} measured in relative $L^2$ error against wall clock time for architectures with different parameter dimensions $D$; }
+    \label{fig:1D-heat}
+\end{figure}
+
+
+\subsection{A 5D Poisson equation}
+
+\begin{align}
+    \begin{split}
+        asdf
+    \end{split}
+\end{align}
+
 \begin{figure}[tb]
   \centering
   \includegraphics{../kfac_pinns_exp/exp18_groupplot_poisson5d/loss.pdf}
@@ -6,44 +72,9 @@
     neural network size under a given time budget of $3\cdot 10^3\,\text{s}$ on an RTX 6000 GPU.}
   \label{fig:pedagogical-example}
 \end{figure}
+\todo[inline]{would present the time plots; }
 
-\subsection{Setup}
-We implement KFAC, KFAC*, as well as the diagonal, block-diagonal, and full-Gramian ENGD in PyTorch~\citep{paszke2019pytorch}.
-As a matrix-free version of ENGD, we use the HessianFree optimizer~\citep{?} which uses truncated CG with exact Gramian-vector products to pre-condition the gradient.
-We chose this because there is a fully-featured implementation from~\citet{tatzel2022late} which offers many additional heuristics such as adaptive damping, CG backtracking, and backtracking line search, which allows this algorithm to be operated with very little hyperparameter searching.
-We also use SGD with a tuned learning rate and momentum, as well as Adam with a tuned learning rate.
-Experiments are run on a compute cluster with RTX 6000 GPUs (24\,GiB RAM).
-
-\paragraph{Experimental setup}
-\begin{itemize}
-\item hyper-parameter search
-\end{itemize}
-
-
-\subsection{Pedagogical example: 2D Poisson and 1D Heat}
-
-We consider the two low-dimensional PDEs used to demonstrate the efficacy of energy natural gradients by~\cite{muller2023achieving}
-as we can use it as a baseline here for its KFAC-approximation. 
-The problems are given by the two-dimensional Poisson equation 
-\begin{align}
-    -\Delta u(x,y) = ? \\ 
-    asdf
-\end{align}
-as well as the one-dimensional heat equation 
-\begin{align}
-\partial_t u(x,t) - \kappa \Delta u(x,t). 
-\end{align}
-Here, we choose the heat-conductivity $\kappa = \frac14$ in our experiments. 
-
-We evaluate the performance of various optimizers... for different network architectures with $4$ hidden layers of different widths and the hyperbolic tangent $\tanh$ as an activation function. 
-
-\begin{itemize}
-    \item write down equations 
-    \item Netzwerkarchitekturen
-\end{itemize}
-
-
-\subsection{A high dimensional Poisson equation}
+\subsection{A 100D Poisson equation}
 
 \begin{itemize}
 \item 100D from deep Ritz paper~\citep{yu2018deep}, i.e.,
@@ -57,7 +88,8 @@ We evaluate the performance of various optimizers... for different network archi
 \end{itemize}
 
 
-\subsection{Heat equation}
+\begin{comment}
+    \subsection{Heat equation}
 
 \begin{itemize}
 \item again 100D
@@ -86,13 +118,15 @@ We evaluate the performance of various optimizers... for different network archi
   % we can also scale in time because $e^{-4\pi^2}\approx e^{-40}$
 \item around $10^5-10^6$ parameters
 \end{itemize}
+\end{comment}
 
 \subsection{Discussion}
 
 Hessian free vs KFAC (KFAC plays nicer with stochasticity?!)
 
-\subsection{Limitations and Future Work}
+%\subsection{Limitations and Future Work}
 
+\paragraph{Limitations}
 \paragraph{Studying further KFAC heuristics} The original KFAC optimizer introduces many additional techniques to improve performance and stability, e.g.\,adaptive damping and heuristics for splitting up the damping onto the different Kronecker factors.
 Our algorithms borrow components, but we did not explore all bells and whistles.
 We believe they can help to either reduce the number of hyper-parameters that need to be tuned, or improve performance.
